--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,4 +1,4 @@
 .section-about{
-    width: 100vw;
+    width: 90vw;
     height: 10vh;
 }
